--- a/public/about.html
+++ b/public/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>imagine &mdash; Onepage Template by Colorlib</title>
+    <title>Sahay</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -57,7 +57,7 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
                 <li><a href="#" class="nav-link">About Us</a></li>
-                <li><a href="#" class="nav-link">Resources</a></li>
+                <!--<li><a href="#" class="nav-link">Resources</a></li>-->
               </ul>
             </nav>
           </div>
@@ -74,7 +74,7 @@
     </div>
     
 
-    <div class="site-section" style="overflow: hidden;">
+    <div class="site-section" style="overflow: hidden;" id="homepage">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-12 col-md-12 ">
@@ -93,7 +93,7 @@
             <div class="container space">
               <div class="row">
                 <h3>Over the years SOCHARA has brought together a multi-disciplinary and equity oriented team of community health and public health professionals supported by an administrative team, presently located in three clusters in Bengaluru, Chennai and Bhopal. This team is supported technically by a larger SOCHARA network of society members, associates, field mentors, fellows and friends</h3>
-                <button><a href="#">LEARN MORE</a></button>
+                <button><a href="http://sochara.org">LEARN MORE</a></button>
               </div>
             </div>
           </div>
@@ -103,9 +103,21 @@
 
     <div class="site-section" id="partners">
       <div class="container">
-        <div class="row">
+        <div class="row">                  
           <h1>OUR PARTNERS</h1>
-          <div style="padding:20vh;"></div>          
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 col-lg-4">
+                <a href="https://sochara.org"><img src="images/Socharalogo.png"/></a>
+              </div>
+              <div class="col-md-4 col-lg-4">
+                <a href="https://manosamvaada.com"><img src="images/manosamvadaa.jpg"/></a>
+              </div>
+              <div class="col-md-4 col-lg-4">
+                <a href="https://www.tatvacenter.com/"><img src="images/tatva.png"/></a>
+              </div>
+            </div>
+          </div>         
         </div>
       </div>
     </div>
