--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <title>Sahay</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Being quarantined may feel scary, difficult & overwhelming due to COVID-19 pandemic. We are here to help"
-    
+    <meta name="description" content="Being quarantined may feel scary, difficult & overwhelming due to COVID-19 pandemic. We are here to help">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
@@ -192,7 +192,7 @@
             <h3 class="text">Know anyone who might benefit from 
             SAHAY Counselling service?
             </h3>
-            <button><a href="#">SHARE</a></button>
+            <button id="myBtn"><a>SHARE</a></button>
           </div>
         </div>
       </div>
@@ -224,6 +224,21 @@
       </div>
     </div>
   </div> <!-- .site-wrap -->
+
+  <div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span id="close">&times;</span>
+      <p>
+        Share the website at <br/>
+        <a href="https://www.facebook.com/sharer.php?quote=Sahay%20-%20A%20sochara%20Initiative%0D%0ABeing%20quarantined%20may%20feel%20scary%2C%20difficult%20%26%20overwhelming%20due%20to%20COVID-19%20pandemic.%20We%20are%20here%20to%20help%0D%0A&u=sahay.life" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/intent/tweet?text=Sahay%20-%20A%20sochara%20Initiative%0D%0ABeing%20quarantined%20may%20feel%20scary%2C%20difficult%20%26%20overwhelming%20due%20to%20COVID-19%20pandemic.%20We%20are%20here%20to%20help%0D%0A&u=sahay.life&url=https://sahay.life" class="fa fa-twitter" target="_blank"></a>
+        <a href="whatsapp://send?text=Sahay+-+A+sochara+Initiative%0D%0ABeing+quarantined+may+feel+scary%2C+difficult+%26+overwhelming+due+to+COVID-19+pandemic.+We+are+here+to+help%0D%0Ahttps%3A%2F%2Fsahay.life" data-action="share/whatsapp/share" class="fa fa-whatsapp" target="_blank"></a>
+      </p>
+  </div>
+
+  </div>
 
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
