--- a/public/index.html
+++ b/public/index.html
@@ -205,8 +205,8 @@
           <div class="col-12">
             <p class="mb-0">
               <a href="#" class="p-3"><span class="icon-facebook"></span></a>
-              <a href="#" class="p-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="p-3"><span class="icon-instagram"></span></a>
+              <a href="https://twitter.com/SahayYour" class="p-3"><span class="icon-twitter"></span></a>
+              <a href="https://instagram.com/your_sahay" class="p-3"><span class="icon-instagram"></span></a>
               <a href="#" class="p-3"><span class="icon-linkedin"></span></a>
               <a href="#" class="p-3"><span class="icon-pinterest"></span></a>
             </p>
