--- a/public/about.html
+++ b/public/about.html
@@ -41,6 +41,9 @@
       </div>
       <div class="site-mobile-menu-body"></div>
     </div>
+
+    <div style="display:none;" id="close"></div>
+    <div style="display:none;" id="myBtn"></div>
    
    
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
@@ -49,15 +52,15 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-md-3 col-xl-4  d-block">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0"><img id="logo" src="images/logo.png" alt="logo"/> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="/" class="text-black h2 mb-0"><img id="logo" src="images/logo.png" alt="logo"/> </a></h1>
           </div>
 
           <div class="col-12 col-md-9 col-xl-8 main-menu">
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
-                <li><a href="#" class="nav-link">About Us</a></li>
-                <!--<li><a href="#" class="nav-link">Resources</a></li>-->
+                <li><a href="/about" class="nav-link">About Us</a></li>
+                <li><a href="/resources" class="nav-link">Resources</a></li>
               </ul>
             </nav>
           </div>
@@ -128,8 +131,8 @@
           <div class="col-12">
             <p class="mb-0">
               <a href="#" class="p-3"><span class="icon-facebook"></span></a>
-              <a href="#" class="p-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="p-3"><span class="icon-instagram"></span></a>
+              <a href="https://twitter.com/SahayYour" class="p-3"><span class="icon-twitter"></span></a>
+              <a href="https://instagram.com/your_sahay" class="p-3"><span class="icon-instagram"></span></a>
               <a href="#" class="p-3"><span class="icon-linkedin"></span></a>
               <a href="#" class="p-3"><span class="icon-pinterest"></span></a>
             </p>
