--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
                 <li><a href="/about" class="nav-link">About Us</a></li>
-                <!--<li><a href="/resources" class="nav-link">Resources</a></li>-->
+                <li><a href="/resources" class="nav-link">Resources</a></li>
               </ul>
             </nav>
           </div>
