Homepage First Section changes

--- a/public/index.html
+++ b/public/index.html
@@ -78,39 +78,28 @@
     
 
     <div class="site-section" style="overflow: hidden;" id="homepage">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-8 col-md-8 ">
-            <!--<h1>SAHAY is a collective of mental health professionals that offer support to anyone in distress.</h1>-->
-            <h1 id="homefont">WE ARE A SAFE SPACE.<br/>
-            GET FREE COUNSELING</h1>
+      <div style="text-align: center !important;" class="container">
+        <h1 id="homefont">GET FREE COUNSELING</h1>
+        <h3 id="hometext">Being quarantined may feel scary, difficult & overwhelming due to <b>COVID-19</b> pandemic. We are here to help</h3>
+        <div style="margin-bottom:8vh;" class="row">
+          <div style="text-align: center;" class="vl col-md-6">
+            <a href="tel:080 47113940"><button class="call">CALL NOW</button></a>
+          </div>
+          <div style="text-align: center;" class="col-md-6">
+            <a href="tel:080 47113940"><button class="call">GIVE A MISSED CALL</button></a>
           </div>
         </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 col-md-8 ">
-                <div class="phone-cover">
-                  <div class='items width-1'>
-                    <div class='phone-number'>9706109109</div>
-                  </div>
-                  <div class='items width-2'>
-                    <div class='phno-text'>GIVE A MISSED CALL</div>
-                  </div>
-                  <div class="clear"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-
+        <div>
+          <p style="font-family: Nunito;font-style: normal;font-weight: 300;font-size: 2rem;line-height: 3rem;color: #000000;">Call us between 10am - 7pm<br/>
+          Monday to Friday</p>
+        </div>
       </div>
     </div> 
 
     <div class="site-section bg-light">
       <div class="container">
         <div class="row">
-          <h3 id="hometext">Being quarantined may feel scary, difficult & overwhelming due to COVID-19 pandemic. We are here to help</h3>
+          
         </div>
       </div>
     </div>
