call button changes

--- a/public/index.html
+++ b/public/index.html
@@ -83,10 +83,12 @@
         <h3 id="hometext">Being quarantined may feel scary, difficult & overwhelming due to <b>COVID-19</b> pandemic. We are here to help</h3>
         <div style="margin-bottom:8vh;" class="row">
           <div style="text-align: center;" class="vl col-md-6">
-            <a href="tel:080 47113940"><button class="call">CALL NOW</button></a>
+            <h3 ><b>CALL NOW</b></h3>
+            <a href="tel:080 47113940"><button class="call">080 47113940</button></a>
           </div>
           <div style="text-align: center;" class="col-md-6">
-            <a href="tel:080 47113940"><button class="call">GIVE A MISSED CALL</button></a>
+            <h3 ><b>GIVE A MISSED CALL</b></h3>
+            <a href="tel:+9197061090109"><button class="call">97061090109</button></a>
           </div>
         </div>
         <div>
@@ -96,11 +98,9 @@
       </div>
     </div> 
 
-    <div class="site-section bg-light">
+    <div class="site-section bl-light">
       <div class="container">
-        <div class="row">
-          
-        </div>
+      <h2 class="webinar-text" style="color:white !important; text-align:center;"><a style="color:white;" href="https://forms.gle/ecuEhUVnWvkF2xJR9 "><u>JOIN OUR WEBINAR</u></a> ABOUT HOW TO MANAGE FEAR AND ANXIETY ON 5TH MAY 1.OOPM</h2>
       </div>
     </div>
 
