--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
 
     <div class="site-section bl-light">
       <div class="container">
-      <h2 class="webinar-text" style="color:white !important; text-align:center;"><a style="color:white;" href="https://forms.gle/ecuEhUVnWvkF2xJR9 "><u>JOIN OUR WEBINAR</u></a> ABOUT HOW TO MANAGE FEAR AND ANXIETY ON 5TH MAY 1.OOPM</h2>
+      <h2 class="webinar-text" style="color:white !important; text-align:center;"><a style="color:white;" href="https://forms.gle/ecuEhUVnWvkF2xJR9 "><u>JOIN OUR WEBINAR</u></a> ABOUT HOW TO MANAGE FEAR AND ANXIETY ON 5TH MAY 3.3OPM</h2>
       </div>
     </div>
 
