--- a/public/resources.html
+++ b/public/resources.html
@@ -80,6 +80,7 @@
 
     <div class="site-section" id="youtube">
       <div class="youtube">
+        <iframe src="https://www.youtube.com/embed/Odnyv-P4I78" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <iframe src="https://youtube.com/embed/ghhG0ulei2o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com/embed/Cvmi_9yJAOY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <iframe src="https://www.youtube.com/embed/Oaj76THuNeY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
