--- a/public/index.html
+++ b/public/index.html
@@ -163,6 +163,12 @@
     <div class="mySlides faded">
       <iframe src="https://www.youtube.com/embed/ShVP0bGWvH8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+    <div class="mySlides faded">
+      <iframe src="https://www.youtube.com/embed/wRfJz5m32xo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div class="mySlides faded">
+      <iframe src="https://www.youtube.com/embed/zxbvjWd1r-Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
     <a class="prev" onclick="plusSlides(-1)"><img src="images/left.svg"></a>
     <a class="next" onclick="plusSlides(1)"><img src="images/right.svg"></a>
@@ -175,6 +181,8 @@
     <span class="dot" onclick="currentSlide(3)"></span> 
     <span class="dot" onclick="currentSlide(4)"></span> 
     <span class="dot" onclick="currentSlide(5)"></span>
+    <span class="dot" onclick="currentSlide(6)"></span>
+    <span class="dot" onclick="currentSlide(7)"></span>
   </div>
 </div>
 
