homepage changes from figma

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
     </div>
     
 
-    <div class="site-section" style="overflow: hidden;" id="homepage">
+    <div class="site-section bg-light" style="overflow: hidden;" id="homepage">
       <div style="text-align: center !important;" class="container">
         <h1 id="homefont">GET FREE COUNSELING</h1>
         <h3 id="hometext">Being quarantined may feel scary, difficult & overwhelming due to <b>COVID-19</b> pandemic. We are here to help</h3>
@@ -98,17 +98,86 @@
       </div>
     </div> 
 
-    <div class="site-section bl-light">
+    <div class="site-section" id="partners">
+      <h2>OUR PARTNERS</h2>
+      <p>SAHAY is a collective of mental health practioners, public health practioners, healthworkers coming together to offer service to those affected by the pandemic.</p>
+      <div  style="text-align: center !important;" class="container">
+        <div class="row">                  
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 col-lg-4">
+                <a href="https://sochara.org"><img src="images/Socharalogo.png"/></a>
+              </div>
+              <div class="col-md-4 col-lg-4">
+                <a href="https://manosamvaada.com"><img src="images/manosamvadaa.jpg"/></a>
+              </div>
+              <div class="col-md-4 col-lg-4">
+                <a href="https://www.tatvacenter.com/"><img src="images/tatva.png"/></a>
+              </div>
+            </div>
+          </div>         
+        </div>
+      </div>
+    </div>
+
+    <div class="site-section" id="qqc">
+      <h2>
+        32+ QUALITY QUALIFIED COUNSELORS
+      </h2>
+      <p>
+        All the counselors who have come onboard SAHAY are trained in Mental health first aid and upto date in their understanding of COVID-19 to best adress the current crisis.
+        <br/>
+        Our counselors speak English, Kannada, Hindi, Marathi     <br/></br>
+        <b>We are  available 8AM-8PM everyday</b>
+      </p>
+    </div>
+
+    <!--
+    <div class="site-section blu-light">
       <div class="container">
       <h2 class="webinar-text" style="color:white !important; text-align:center;"><a style="color:white;" href="https://forms.gle/ecuEhUVnWvkF2xJR9 "><u>JOIN OUR WEBINAR</u></a> ABOUT HOW TO MANAGE FEAR AND ANXIETY ON 5TH MAY 3.3OPM</h2>
       </div>
+    </div>
+    -->
+
+    <div class="site-section bla-light" style="padding-top:3vh; padding-bottom:1vh;">
+      <h1 id="hdiw">HOW DOES IT WORK?</h1>
+    </div>
+
+    <div class="site-section blu-light" id="hd" style="text-align: center;">
+      <h5 style="
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 3rem;
+        line-height: 4rem;
+        text-align: center;
+        color: #F8F8F8 !important;
+        margin-bottom: 5vh;
+
+      ">
+        HOTLINE SERVICE - 080 47113940
+      </h5>
+      <h6 style="
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 1.5rem;
+        line-height: 41px;
+        text-align: center;
+        color: #F8F8F8 !important;
+      ">
+        Get directly connected to a qualified counsellor for a one time session
+      </h6>
+      <img style="margin:5vh 0vw;" src="images/call.png"/>
     </div>
 
     <div class="site-section cr-light" id="procedure">
       <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-12 col-md-12 ">
-            <h1 id="homefont">HOW DOES IT WORK?</h1>
+            <h1 id="homefont">MISSED CALL SERVICE -  97061090109</h1>
+            <h4 id="subhomefont">Get upto 3 sessions with a qualified consellor* </h4>
             <div class="container space">
               <div class="row">
                 <div class="content col-md-4 col-lg-4">
@@ -133,8 +202,8 @@
       </div>
     </div>
 
-    <div class="site-section" id="workwithus">
-      <div class="container">
+    <div class="site-section" id="workwithus" style="text-align: center; margin:0vh 3vw;">
+      <!--<div class="container">
         <div class="row">
           <div class="col-lg-10 col-md-10 ">
             <h3 class="text">Inviting counsellors to volunteer and be supported by a peer support system while being at it.
@@ -143,6 +212,12 @@
           </div>
         </div>
       </div>
+      -->
+      <h2>VOLUNTEER WITH US</h2>
+      <p><b>Fee training in mental health first aid</b> to counselors looking to work with COVID-19 affected individuals in collaboration </br>
+      Join us as volunteer  counselor to offer your support to those affected and  being supported by a peer group while at it. </p>
+      <button class="nxtbt"><a href="https://forms.gle/hqEkHcwfxCSF97Wj7">TRAIN WITH US</a></button>
+      <button class="nxtbt"><a href="https://forms.gle/hqEkHcwfxCSF97Wj7">WORK WITH US</a></button>
     </div>
 
 
@@ -186,17 +261,11 @@
   </div>
 </div>
 
-    <div class="site-section cr-light" id="share">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-10 col-md-10 ">
-            <h3 class="text">Know anyone who might benefit from 
-            SAHAY Counselling service?
-            </h3>
-            <button id="myBtn"><a>SHARE</a></button>
-          </div>
-        </div>
-      </div>
+    <div class="site-section cr-light" style="text-align: center;" id="share">
+      <h3 style="color:white !important;" class="text">Know anyone who might benefit from 
+      SAHAY Counselling service?
+      </h3>
+      <button id="myBtn"><a>SHARE</a></button>
     </div>
    
 
