removing train with us button

--- a/public/index.html
+++ b/public/index.html
@@ -216,7 +216,7 @@
       <h2>VOLUNTEER WITH US</h2>
       <p><b>Fee training in mental health first aid</b> to counselors looking to work with COVID-19 affected individuals in collaboration </br>
       Join us as volunteer  counselor to offer your support to those affected and  being supported by a peer group while at it. </p>
-      <button class="nxtbt"><a href="https://forms.gle/hqEkHcwfxCSF97Wj7">TRAIN WITH US</a></button>
+      <!--<button class="nxtbt"><a href="https://forms.gle/hqEkHcwfxCSF97Wj7">TRAIN WITH US</a></button>-->
       <button class="nxtbt"><a href="https://forms.gle/hqEkHcwfxCSF97Wj7">WORK WITH US</a></button>
     </div>
 
