--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,53 @@
     </div>
     
 
-    <div class="site-section bg-light" style="overflow: hidden;" id="homepage">
+    <div class="site-section bg-light" style="text-align: center;" id="intro">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="site-section bg-light" style="overflow: hidden;" id="homepage">
+              <div style="text-align: center !important;" class="container">
+                <h1 id="homefont">GET FREE COUNSELING</h1>
+                <h3 id="hometext">Being quarantined may feel scary, difficult & overwhelming due to <b>COVID-19</b> pandemic. We are here to help</h3>
+                <div style="margin-bottom:8vh;" class="row">
+                  <div style="text-align: center;" class="vl col-md-6">
+                    <h3 ><b>CALL NOW</b></h3>
+                    <a href="tel:080 47113940"><button class="call">080 47113940</button></a>
+                  </div>
+                  <div style="text-align: center;" class="col-md-6">
+                    <h3 ><b>GIVE A MISSED CALL</b></h3>
+                    <a href="tel:+919706109109"><button class="call">9706109109</button></a>
+                  </div>
+                </div>
+                <div>
+                  <p style="font-family: Nunito;font-style: normal;font-weight: 300;font-size: 2rem;line-height: 3rem;color: #000000;">Call us between 10am - 7pm<br/>
+                  Monday to Friday</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img style="text-align:center;" src="images/sl1.jpg"/> 
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <img class="slideButtons" src="images/left.svg"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <img  class="slideButtons" src="images/right.svg"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+<!--
+      <div class="slideshow-container">
+        <div class="nmySlides faded">
+              <div class="site-section bg-light" style="overflow: hidden;" id="homepage">
       <div style="text-align: center !important;" class="container">
         <h1 id="homefont">GET FREE COUNSELING</h1>
         <h3 id="hometext">Being quarantined may feel scary, difficult & overwhelming due to <b>COVID-19</b> pandemic. We are here to help</h3>
@@ -97,6 +143,21 @@
         </div>
       </div>
     </div> 
+        </div>
+        <div class="nmySlides faded">
+          <img src="images/sl1.jpg"/>   
+        </div>
+
+        <a class="prev" onclick="nplusSlides(-1)"><img src="images/left.svg"></a>
+        <a class="next" onclick="nplusSlides(1)"><img src="images/right.svg"></a>
+      </div>
+      <br>
+
+      <div style="text-align:center">
+        <span class="ndot" onclick="ncurrentSlide(1)"></span> 
+        <span class="ndot" onclick="ncurrentSlide(2)"></span> 
+      </div>-->
+    </div>
 
     <div class="site-section" id="partners">
       <h2>OUR PARTNERS</h2>
@@ -324,6 +385,7 @@
   
   <script src="js/main.js"></script>
   <script>showSlides(slideIndex);</script>
+  <script>nshowSlides(nslideIndex);</script>
   
   </body>
 </html>
