--- a/public/index.html
+++ b/public/index.html
@@ -90,14 +90,17 @@
               <div style="text-align: center !important;" class="container">
                 <h1 id="homefont">GET FREE COUNSELING</h1>
                 <h3 id="hometext">Being quarantined may feel scary, difficult & overwhelming due to <b>COVID-19</b> pandemic. We are here to help</h3>
-                <div style="margin-bottom:8vh;" class="row">
+                <div style="margin-bottom:8vh;" class="row align-items-center">
                   <div style="text-align: center;" class="vl col-md-6">
-                    <h3 ><b>CALL NOW</b></h3>
-                    <a href="tel:080 47113940"><button class="call">080 47113940</button></a>
+                    <h4><b>KARNATAKA HOTLINE</b></h4>
+                    <a href="tel:080 47113940"><button class="call">080 - 47113940</button></a>
+                    <br/>
+                    <h4  style="margin-top: 3vh;"><b>KARNATAKA MISSED CALL</b></h4>
+                    <a href="tel:080 47113940"><button class="call">080 - 47113940</button></a>
                   </div>
                   <div style="text-align: center;" class="col-md-6">
-                    <h3 ><b>GIVE A MISSED CALL</b></h3>
-                    <a href="tel:+919706109109"><button class="call">9706109109</button></a>
+                    <h4 ><b>TAMIL NADU HOTLINE</b></h4>
+                    <a href="tel:044 4631 5951"><button class="call">044 4631 5951</button></a>
                   </div>
                 </div>
                 <div>
@@ -382,7 +385,15 @@
   <script src="js/aos.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/jquery.sticky.js"></script>
-  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171594437-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-171594437-1');
+</script>
   <script src="js/main.js"></script>
   <script>showSlides(slideIndex);</script>
   <script>nshowSlides(nslideIndex);</script>
