--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                     <a href="tel:080 47113940"><button class="call">080 - 47113940</button></a>
                     <br/>
                     <h4  style="margin-top: 3vh;"><b>KARNATAKA MISSED CALL</b></h4>
-                    <a href="tel:080 47113940"><button class="call">080 - 47113940</button></a>
+                    <a href="tel:+91 97061 09109"><button class="call">9706109109</button></a>
                   </div>
                   <div style="text-align: center;" class="col-md-6">
                     <h4 ><b>TAMIL NADU HOTLINE</b></h4>
